--- a/mb_webpage.html
+++ b/mb_webpage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="mystyle.css">
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="plotting.js"></script>
-    <script src="crossings.js"></script>
+    <script src="https://abureyanahmed.github.io/data_visualization/slides/crossings.js"></script>
 </head>
 <body style="font-family: 'Times New Roman', Times, serif;">
 
